Lab9/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    namespace: frontend
---

apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    namespace: backend
