Lab9/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: backend 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
