Lab9/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: database 
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
